2013-12-12  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.ui:
	* titania.desktop: 

2013-12-12  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* main.cpp:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DBrowserWidget.h:
	* info.wrl:
	* X3DBrowserEditor.h:
	* titania.desktop:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWidget.cpp: 

2013-12-12  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* LibraryView.cpp:
	* X3DBrowserWidget.cpp:
	* X3DBrowserEditor.cpp: 

2013-12-11  Holger Seelig  <holger.seelig@yahoo.de>

	* NodePropertiesEditor.cpp: 

2013-12-10  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* BrowserWindow.cpp:
	* X3DDialogInterface.cpp:
	* TextureEditor.ui:
	* MaterialEditor.cpp:
	* MaterialEditor.ui:
	* X3DTextureEditorInterface.h:
	* X3DMaterialEditorInterface.h:
	* X3DTextureEditorInterface.cpp:
	* X3DMaterialEditorInterface.cpp: 

2013-12-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* Material.x3dv:
	* X3DUserInterface.h:
	* BrowserWindow.h:
	* X3DUserInterface.cpp:
	* TextureEditor.ui:
	* BrowserWindow.cpp:
	* BrowserWindow.ui:
	* MaterialEditor.ui:
	* X3DBrowserWidget.h:
	* X3DDialogInterface.cpp:
	* X3DBrowserWidget.cpp:
	* TextureEditor.h:
	* Material.x3dv:
	* X3DUserInterface (Kopie).h:
	* TextureEditor.cpp:
	* NodePropertiesEditor.ui:
	* MaterialEditor.cpp:
	* TextureEditor.ui:
	* MaterialEditor.ui:
	* NodePropertiesEditor.ui:
	* X3DBrowserWindowInterface.h:
	* X3DTextureEditorInterface.h:
	* X3DMaterialEditorInterface.h:
	* X3DBrowserWindowInterface.cpp:
	* X3DTextureEditorInterface.cpp:
	* X3DNodePropertiesEditorInterface.h: 

2013-12-08  Holger Seelig  <holger.seelig@yahoo.de>

	* style.css:
	* X3DUserInterface.h:
	* TextureEditor.ui:
	* X3DUserInterface.cpp:
	* MaterialEditor.ui:
	* NodePropertiesEditor.ui:
	* MaterialEditor.cpp: 

2013-12-07  Holger Seelig  <holger.seelig@yahoo.de>

	* UndoHistory.cpp:
	* TextureEditor.ui:
	* MaterialEditor.ui: 
