@@ -669,13 +669,13 @@
     </child>
   </object>
   <object class="GtkWindow" id="Window">
-    <property name="width_request">1000</property>
-    <property name="height_request">618</property>
+    <property name="width_request">768</property>
+    <property name="height_request">576</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Titania</property>
     <property name="window_position">center</property>
-    <property name="default_width">1000</property>
-    <property name="default_height">618</property>
+    <property name="default_width">768</property>
+    <property name="default_height">576</property>
     <property name="has_resize_grip">False</property>
     <style>
       <class name="Titania"/>
