@@ -1,3 +1,7 @@
+2013-12-13  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* BrowserWindow.ui: 
+
 2013-12-12  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* BrowserWindow.ui:
